--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -4,16 +4,15 @@ html
     meta(charset="UTF-8")/
     meta(name="author", content="Giorgi Abuladze")/
     meta(name="viewport", content="width=device-width, initial-scale=1.0")/
-    link(rel="stylesheet", href="http://fonts.googleapis.com/icon?family=Material+Icons")
-    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css", media="screen", charset="utf-8")
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")/
+    link(rel="stylesheet", href="../../assets/css/style.css")/
     title #{title} - Vout
   body
-    div(class="container")
-      include ./includes/menu.pug
+    include ./includes/menu.pug
+    div(class="container-fluid")
       block content
       div(class="row")
-        div(class="col s12")
+        div(class="col-lg-12")
           p Coded by Giorgi Abuladze
-          script(type="text/javascript", src="https://code.jquery.com/jquery-2.1.1.min.js")
-          script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js")
-          script(type="text/javascript", src="../../../assets/js/script.js")
+        script(type="text/javascript", src="https://code.jquery.com/jquery-2.1.1.min.js")
+        script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
