--- a/app/views/auth/login.pug
+++ b/app/views/auth/login.pug
@@ -4,7 +4,7 @@ block content
   div(class="row")
     div(class="col-lg-4")
     div(class="col-lg-4")
-      form
+      form(action="/login", method="post")
         div(class="form-group")
           label(for="email") Email
           input(type="email", class="form-control", id="email", name="email", placeholder="example@examp.le")
