--- a/app/views/users/signup.pug
+++ b/app/views/users/signup.pug
@@ -4,7 +4,7 @@ block content
   div(class="row")
     div(class="col-lg-4")
     div(class="col-lg-4")
-      form
+      form(action="/signup", method="post")
         div(class="form-group")
           label(for="usename") Username
           input(type="text", class="form-control", id="Username", name="Username", placeholder="username")
