Added loggedin middlware and a basic form for adding polls

--- a/app/views/includes/menu.pug
+++ b/app/views/includes/menu.pug
@@ -1,4 +1,4 @@
-nav(class="navbar navbar-default")
+nav(class="navbar navbar-inverse")
   div(class="container-fluid")
     div(class="navbar-header")
       button(type="button", class="navbar-toggle collapsed", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1", aria-expanded="false")
@@ -10,7 +10,33 @@ nav(class="navbar navbar-default")
     div(class="collapse navbar-collapse", id="bs-example-navbar-collapse-1")
       ul(class="nav navbar-nav navbar-right")
         li: a(href="/") Home
-        if current_user == null
+        if user == null
           li: a(href="/oauth/google") Sign In with Google
         else
-          li: a(href="/logout") Log Out
+          li(class="dropdown")
+            a(href="#", class="dropdown-toggle", data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false")
+              span= user.name
+              img(src= user.photoUrl, class="img-circle img-profile")/
+              span(class="caret")
+            ul(class="dropdown-menu")
+              li: a(href="/polls/" + user.id) My polls
+              li: a(href="/polls/new") Add poll
+              li(role="separator", class="divider")
+              li: a(href="/logout") Log Out
+
+
+
+
+
+//- <li class="dropdown">
+//-   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+//-   <ul class="dropdown-menu">
+//-     <li><a href="#">Action</a></li>
+//-     <li><a href="#">Another action</a></li>
+//-     <li><a href="#">Something else here</a></li>
+//-     <li role="separator" class="divider"></li>
+//-     <li><a href="#">Separated link</a></li>
+//-     <li role="separator" class="divider"></li>
+//-     <li><a href="#">One more separated link</a></li>
+//-   </ul>
+//- </li>
