--- a/app/views/polls/index.pug
+++ b/app/views/polls/index.pug
@@ -3,6 +3,4 @@ extends ../layout.pug
 block content
   div(class="row")
     div(class="col-lg-12")
-      h1 index
-    p
-      #{user}
+      h1= title
