--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,1 +1,14 @@
 * {border-radius: 0 !important;}
+.img-circle {
+  border-radius: 50% !important;
+}
+a.dropdown-toggle {padding-top: 0 !important; padding-bottom: 0 !important;}
+a.dropdown-toggle img {
+  margin-left: 10px !important;
+}
+.btn-group {
+  margin-left: 10px;
+}
+.added {
+  margin-top: 10px;
+}
