--- a/app/views/includes/flashMsg.pug
+++ b/app/views/includes/flashMsg.pug
@@ -1,5 +1,5 @@
 while message = flash.shift()
-  div(class="alert alert-warning alert-dismissible" role="alert")
+  div(class="alert alert-dismissible alert-"+message.type role="alert")
     button(type="button" class="close" data-dismiss="alert" aria-label="Close")
       span(aria-hidden="true") &times;
-    strong= message.type+": "+message.message
+    strong= message.message
