--- a/app/views/includes/menu.pug
+++ b/app/views/includes/menu.pug
@@ -11,7 +11,10 @@ nav(class="navbar navbar-inverse")
       ul(class="nav navbar-nav navbar-right")
         li: a(href="/") Home
         if user == null
-          li: a(href="/oauth/google") Sign In with Google
+          li
+            a(href="/oauth/google")
+              i(class="fa fa-google-plus") 
+              | Sign In
         else
           li(class="dropdown")
             a(href="#", class="dropdown-toggle", data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false")
