--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -6,6 +6,7 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")/
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")/
     link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")/
+    link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css")/
     link(rel="stylesheet", href="../../assets/css/style.css")/
     title #{title} - Vout
   body
@@ -18,4 +19,6 @@ html
           p Coded by Giorgi Abuladze
         script(type="text/javascript", src="https://code.jquery.com/jquery-2.1.1.min.js")
         script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS", crossorigin="anonymous")
+        script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js")
         script(type="text/javascript", src="../../assets/js/script.js")
+        script(type="text/javascript", src="../../assets/js/charts.js")
