--- a/app/views/includes/menu.pug
+++ b/app/views/includes/menu.pug
@@ -9,11 +9,12 @@ nav(class="navbar navbar-inverse")
       a(class="navbar-brand", href="#") Vout
     div(class="collapse navbar-collapse", id="bs-example-navbar-collapse-1")
       ul(class="nav navbar-nav navbar-right")
-        li: a(href="/") Home
+        li
+          a(href="/", class="btn btn-default navbar-btn") Home
         if user == null
           li
-            a(href="/oauth/google")
-              i(class="fa fa-google-plus") 
+            a(href="/oauth/google", class="btn btn-danger navbar-btn")
+              i(class="fa fa-google-plus")
               | Sign In
         else
           li(class="dropdown")
