--- a/app/views/polls/view.pug
+++ b/app/views/polls/view.pug
@@ -11,9 +11,9 @@ block content
       form(action="/poll/"+_id+"/vote", method="post")
         div(class="form-group")
           label(for="option") I'd like to vote for:
-          select(class="form-control")
+          select(class="form-control", name="option")
             for option in options
-              option(value=option.name)= option.name
+              option(value=option._id)= option.name
         button(type="submit", class="btn btn-default") Submit
     div(class="col-lg-6")
       canvas(id="pollChart")
