--- a/app/views/polls/view.pug
+++ b/app/views/polls/view.pug
@@ -2,18 +2,22 @@ extends ../layout.pug
 
 block content
   script(type="text/javascript").
-    var pollOptions = !{JSON.stringify(options)}
+    var pollOptions = !{JSON.stringify(poll.options)}
   div(class="row")
     div(class="col-lg-12")
-      h2= title
+      h2= poll.title
   div(class="row")
     div(class="col-lg-6")
-      form(action="/poll/"+_id+"/vote", method="post")
+      form(action="/poll/"+poll._id+"/vote", method="post")
         div(class="form-group")
           label(for="option") I'd like to vote for:
           select(class="form-control", name="option")
-            for option in options
+            for option in poll.options
               option(value=option._id)= option.name
         button(type="submit", class="btn btn-default") Submit
+      if author
+        hr
+        a(href="/polls/delete/"+poll._id, class="btn btn-danger")
+          | Delete Poll
     div(class="col-lg-6")
       canvas(id="pollChart")
