Added ability to add custom vote option if logged in

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,3 +12,8 @@ a.dropdown-toggle img {
 .added {
   margin-top: 10px;
 }
+.google-login {
+  background-color: #E53935 !important;
+  color: #FFFFFF !important;
+}
+.google-login:hover {background-color: #ee3b37 !important;}
