--- a/app/views/includes/menu.pug
+++ b/app/views/includes/menu.pug
@@ -10,15 +10,15 @@ nav(class="navbar navbar-inverse")
     div(class="collapse navbar-collapse", id="bs-example-navbar-collapse-1")
       ul(class="nav navbar-nav navbar-right")
         li
-          a(href="/", class="btn btn-default navbar-btn") Home
+          a(href="/") Home
         if user == null
           li
-            a(href="/oauth/google", class="btn btn-danger navbar-btn")
+            a(href="/oauth/google", class="google-login")
               i(class="fa fa-google-plus")
               | Sign In
         else
           li(class="dropdown")
-            a(href="#", class="dropdown-toggle", data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false")
+            a(href="#", class="google-login dropdown-toggle", data-toggle="dropdown", role="button", aria-haspopup="true", aria-expanded="false")
               span= user.name
               img(src= user.photoUrl, class="img-circle img-profile")/
               span(class="caret")
