--- a/app/views/polls/view.pug
+++ b/app/views/polls/view.pug
@@ -7,13 +7,18 @@ block content
     div(class="col-lg-12")
       h2= poll.title
   div(class="row")
-    div(class="col-lg-6")
+    div(class="col-lg-6", id="forms")
       form(action="/poll/"+poll._id+"/vote", method="post")
         div(class="form-group")
           label(for="option") I'd like to vote for:
           select(class="form-control", name="option")
             for option in poll.options
               option(value=option._id)= option.name
+            if user !== null
+              option(value="custom") I'd like to vote for something else
+          if user !== null
+            div(class="form-group", class="hidden", id="customOption")
+              input(type="text", name="customOption", id="optionInput", class="form-control", placeholder="Put your option here")
         button(type="submit", class="btn btn-default") Submit
       if author
         hr
