--- a/app/views/polls/new.pug
+++ b/app/views/polls/new.pug
@@ -4,7 +4,7 @@ block content
   div(class="row")
     div(class="col-lg-12")
       h1= title
-      form(action="/polls/new", method="POST")
+      form(action="/polls/create", method="POST")
         div(class="form-group")
           label(for="title") Title
           input(type="text" class="form-control" id="title" name="title" placeholder="Title" required)
