--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,5 @@
 * {border-radius: 0 !important;}
+body {padding-top: 70px !important;}
 .img-circle {
   border-radius: 50% !important;
 }
@@ -17,3 +18,16 @@ a.dropdown-toggle img {
   color: #FFFFFF !important;
 }
 .google-login:hover {background-color: #ee3b37 !important;}
+.btn-twitter {
+  color: #4099FF !important;
+  background: transparent;
+  width: 38px !important;
+  height: 24px !important;
+  border-radius: 1.5px !important;
+  vertical-align: top !important;
+  margin-left: 5px;
+}
+.btn-twitter i {
+  font-size: 15px;
+  margin-top: 0px !important;
+}
