--- a/app/views/polls/new.pug
+++ b/app/views/polls/new.pug
@@ -1,20 +1,22 @@
 extends ../layout.pug
 
 block content
-  div(class="row")
-    div(class="col-lg-12")
-      h1= title
-      form(action="/polls/create", method="POST")
-        div(class="form-group")
-          label(for="title") Title
-          input(type="text" class="form-control" id="title" name="title" placeholder="Title" required)
-        div(class="form-group")
-          label(for="options") Options
-          div(class="btn-group" role="group")
-            button(type="button", class="btn btn-success btn-xs", id="add")
-              i(class="fa fa-plus")
-            button(type="button", class="btn btn-danger btn-xs", id="remove")
-              i(class="fa fa-minus")
-          div(id="options")
-            input(type="text" class="form-control" name="options" required)
-        button(type="submit", class="btn btn-default") Submit
+  section
+    div(class="container-fluid")
+      div(class="row")
+        div(class="col-lg-12")
+          h1= title
+          form(action="/polls/create", method="POST")
+            div(class="form-group")
+              label(for="title") Title
+              input(type="text" class="form-control" id="title" name="title" placeholder="Title" required)
+            div(class="form-group")
+              label(for="options") Options
+              div(class="btn-group" role="group")
+                button(type="button", class="btn btn-success btn-xs", id="add")
+                  i(class="fa fa-plus")
+                button(type="button", class="btn btn-danger btn-xs", id="remove")
+                  i(class="fa fa-minus")
+              div(id="options")
+                input(type="text" class="form-control" name="options" required)
+            button(type="submit", class="btn btn-default") Submit
