--- a/app/views/polls/user.pug
+++ b/app/views/polls/user.pug
@@ -1,15 +1,16 @@
 extends ../layout.pug
 
 block content
-  div(class="row")
-    div(class="col-lg-12")
-      h1= title
-      div(class="list-group")
-        if polls.length == 0
-          div(class="alert alert-info")
-            | You haven't created any polls yet.
-            strong
-              a(href="/polls/new") Click here to create one now.
-        for poll in polls
-          a(href="/polls/view/"+poll._id, class="list-group-item")
-            strong= poll.title
+  div(class="container-fluid")
+    div(class="row")
+      div(class="col-lg-12")
+        h1= title
+        div(class="list-group")
+          if polls.length == 0
+            div(class="alert alert-info")
+              | You haven't created any polls yet.
+              strong
+                a(href="/polls/new") Click here to create one now.
+          for poll in polls
+            a(href="/polls/view/"+poll._id, class="list-group-item")
+              strong= poll.title
