--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,14 +37,11 @@ section {
   min-height: calc(100% - 1px);
 }
 footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding-top: 10px;
-  background-color: #201f1f;
-  color: #f2f2f2;
-  text-align: center;
+  clear: both;
+  position: relative;
+  z-index: 10;
+  height: 3em;
+  margin-top: -3em;
 }
 footer a {
   color: #ededed;
