--- a/app/views/polls/view.pug
+++ b/app/views/polls/view.pug
@@ -9,7 +9,7 @@ block content
         div(class="col-lg-12")
           h2= poll.title
       div(class="row")
-        div(class="col-lg-6", id="forms")
+        div(class="col-lg-6 col-md-6 col-sm-6 col-xs-6", id="forms")
           form(action="/poll/"+poll._id+"/vote/create", method="post")
             div(class="form-group")
               label(for="option") I'd like to vote for:
@@ -31,5 +31,5 @@ block content
             hr
             a(href="/polls/delete/"+poll._id, class="btn btn-danger")
               | Delete Poll
-        div(class="col-lg-6")
+        div(class="col-lg-6 col-md-6 col-sm-6 col-xs-6")
           canvas(id="pollChart")
