--- a/client/src/app/pages/polls/polls.component.html
+++ b/client/src/app/pages/polls/polls.component.html
@@ -1,7 +1,13 @@
-<div *ngIf='polls'>
-  <div class="list-group">
-    <div *ngFor='let poll of polls'>
-      <a class="list-group-item" href="#"><strong>{{poll.title}}</strong></a>
-    <div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div *ngIf='polls'>
+        <div class="list-group">
+          <div *ngFor='let poll of polls'>
+            <a class="list-group-item" href="#"><strong>{{poll.title}}</strong></a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
