--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -26,6 +26,13 @@
 
   <body>
     <app-navbar></app-navbar>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12">
+          <flash-messages></flash-messages>
+        </div>
+      </div>
+    </div>
     <router-outlet></router-outlet>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
