Added right margin of 10px to google-login class

--- a/client/src/app/components/navbar/navbar.component.css
+++ b/client/src/app/components/navbar/navbar.component.css
@@ -1,6 +1,7 @@
 .google-login {
   background-color: #E53935 !important;
   color: #FFFFFF !important;
+  margin-right: 10px;
 }
 .google-login:hover {background-color: #ee3b37 !important;}
 .img-circle {
