--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="">Home</a></li>
-        <li *ngIf="!_login.loggedIn()"><button class="btn navbar-btn google-login" (click)="_auth.googleAuthenticate()"><i class="fa fa-google-plus"></i> Log in</button></li>
+        <li *ngIf="!_login.loggedIn()"><button class="btn navbar-btn google-login" (click)="_login.googleAuthenticate()"><i class="fa fa-google-plus"></i> Log in</button></li>
         <li class="dropdown" *ngIf="_login.loggedIn()">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
