--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,8 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+        aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -13,10 +14,21 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right" app-login></ul>
       <ul class="nav navbar-nav navbar-right">
         <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"><a routerLink="">Home</a></li>
+        <li *ngIf="!_auth.loggedIn()"><a class="google-login" href="/auth/google"><i class="fa fa-google-plus"></i> Log in</a></li>
+        <li class="dropdown" *ngIf="_auth.loggedIn() && this.user">
+          <a href="#" class="google-login dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>{{user.profile.name}}</span> <img class="img-circle" src="{{user.profile.image}}"> <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">My polls</a></li>
+            <li><a href="#">App Poll</a></li>
+            <li role="separator" class="divider"></li>
+            <li><button class="btn btn-danger btn-block" (click)="onLogoutClick()">Log out</button></li>
+          </ul>
+        </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
 </nav>
