--- a/client/src/app/pages/create-poll/create-poll.component.html
+++ b/client/src/app/pages/create-poll/create-poll.component.html
@@ -1,3 +1,32 @@
-<p>
-  create-poll works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-offset-3 col-lg-6">
+      <form>
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input class="form-control" type="text" [(ngModel)]="title" name="title" placeholder="Title" required>
+        </div>
+        <div class="form-group">
+          <label for="options">Options</label>
+          <div class="row">
+            <div class="col-lg-6">
+              Current Options:
+              <ul>
+                <li *ngFor="let option of options">{{option}} <button class="btn btn-danger" (click)="deleteFromOptions(option)">X</button></li>
+              </ul>
+            </div>
+            <div class="col-lg-6">
+              <div class="input-group">
+                <input type="text" class="form-control" #option name="option">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="button" (click)="addOption(option.value)">Add!</button>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="btn btn-default" type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
+</div>
