--- a/client/src/app/pages/create-poll/create-poll.component.html
+++ b/client/src/app/pages/create-poll/create-poll.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-offset-3 col-lg-6">
-      <form>
+      <form (submit)="onSubmit()">
         <div class="form-group">
           <label for="title">Title</label>
           <input class="form-control" type="text" [(ngModel)]="title" name="title" placeholder="Title" required>
