--- a/client/src/app/pages/user-polls/user-polls.component.html
+++ b/client/src/app/pages/user-polls/user-polls.component.html
@@ -1,3 +1,13 @@
-<p>
-  user-polls works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div *ngIf='polls'>
+        <div class="list-group">
+          <div *ngFor='let poll of polls'>
+            <a class="list-group-item" routerLink="/polls/{{poll._id}}/view"><strong>{{poll.title}}</strong></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
