Added routelink to users's polls page

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
         <li class="dropdown" *ngIf="_login.loggedIn() && this.user">
           <a href="#" class="google-login dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>{{user.name}}</span> <img class="img-circle" src="{{user.image}}"> <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">My polls</a></li>
+            <li><a [routerLink]="['/polls/users/', _login.getProfile()['id'] ]">My polls</a></li>
             <li><a routerLink="/polls/create">Add Poll</a></li>
             <li role="separator" class="divider"></li>
             <li><button class="btn btn-danger btn-block" (click)="onLogoutClick()">Log out</button></li>
