--- a/client/src/app/pages/poll-details/poll-details.component.html
+++ b/client/src/app/pages/poll-details/poll-details.component.html
@@ -20,7 +20,7 @@
           </div>
           <div class="form-group" *ngIf="customOption">
             <label>Name:</label>
-            <input type="text" class="form-control" name="option">
+            <input type="text" class="form-control" name="option" [(ngModel)]="option" >
           </div>
           <button class="btn btn-default" type="submit">Submit</button>
         </form>
