Added copyright text

--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -1,3 +1,9 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <p>Coded by Giorgi Abuladze |<a href="https://github.com/gabuladze/vout" target="_blank">Github repo</a></p>
+      </div>
+    </div>
+  </div>
+</footer>
