--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,6 +1,6 @@
 * {border-radius: 0 !important;}
 html {box-sizing: border-box;}
-body {padding-top: 70px !important; background-color: #f1f1f1 !important;}
+body {padding-top: 70px !important;}
 body, html { height: 100%;}
 section {
   min-height: calc(100% - 1px);
