Added text-center class to footer p

--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12">
-        <p>Coded by Giorgi Abuladze |<a href="https://github.com/gabuladze/vout" target="_blank">Github repo</a></p>
+        <p class="text-center">Coded by Giorgi Abuladze |<a href="https://github.com/gabuladze/vout" target="_blank">Github repo</a></p>
       </div>
     </div>
   </div>
